--- a/catalog.html
+++ b/catalog.html
@@ -19,22 +19,28 @@
 	   </nav>
 	   
 	   <div class="user-block">
-	  </div>
-	      <a class="login" href=#>Вход</a>
+	    <a class="login" href=#>Вход</a>
+	   </div>
+	   <div class="logotip">
+	    <img src="http://placehold.it/150x100" width="200px" height="50px">
+	   </div>
 	  </div>
 	</header>
 	
 	<main class="content">
 	 <div class="container">
+	 <div class="block-breadcrumbs">
 	  <h1 class="zagolovok" >Средства для ухода</h1>
 	  <div class="breadcrumbs">
-        <p>
-		  <a href="#">Главная</a>
-		  <a href="#">Магазин</a>
-		  <a href="#"><span>Средства для ухода</span></a>
-        </p>	    
+        <ul>
+		   <li><a href="#">Главная</a></li>
+		   <li><a href="#">Магазин</a></li>
+		   <li><a href="#"><span>Средства для ухода</span></a></li>
+        </ul>	    
 	  </div>
+	 </div>
 	  
+	<div class="main-left">  
 	<div class="proizvod">  
 	 <h2>Производители</h2>
      <form action="#" method="post">
@@ -64,7 +70,6 @@
 	</div>   
 	   
 	<div class="towar">    
-     </form>
 	   <h2>Группы товаров</h2>
 	 <form action="#" method="post">
 	   <label> 
@@ -79,12 +84,14 @@
 	    <input type="radio"  value="3"> Аксессуары
 	   </label>
 	 </form>
-	   </div>
+	   <div>
 	      <a class="prosmotr" href=#>Показать</a>
 	   </div>
 	</div>
+	</div>
 	
-	<div>
+	 <div class="main-center">
+	 <div class="towar-img">
 	  <article>
 	      <img src="http://placehold.it/150x100">
 		  <div>
@@ -141,13 +148,13 @@
 	 
       <div class="stranica">
         <ul>
-		  <li>1</li>
-		  <li>2</li>
-		  <li>3</li>
+		  <li><a href="#">1</a></li>
+		  <li><a href="#">2</a></li>
+		  <li><a href="#">3</a></li>
         </ul>		
-	  </div>	  
-	 </div>
-	</div> 
+	  </div>
+     </div>  
+	</div>
 	</main>
 	
 	<footer class="main-footer">
