--- a/catalog-item.html
+++ b/catalog-item.html
@@ -7,7 +7,7 @@
   <body>
 
     <header class="main-menu">
-	  <div class="container">
+	 <div class="container">
 	   <nav class="main-navigation">
         <ul>
 		  <li><a href="#" >Информация</a></li>
@@ -21,19 +21,23 @@
 	   <div class="user-block">
 	      <a class="login" href=#>Вход</a>
 	  </div>
+	  <div class="logotip">
+	    <img src="http://placehold.it/150x100" width="200px" height="50px">
 	  </div>
+	</div>
 	</header>
 	
     <main class="content">
-	 <div class="conteiner">
+	<div class="conteiner">
 	   <div class="block-breadcrumbs">
 	    <h1>Набор для путешествий "BAXTER OF CALIFORNIA"</h1>
 		  <div class="breadcrumbs">
-		    <p><a href="#">Главная</a>
-			   <a href="#">Магазин</a>
-			   <a href="#">Средства для ухода</a>
-			   <a href="#"><span>Набор для путешествий "BAXTER OF CALIFORNIA"</span></a>
-			</p>
+		    <ul>
+			   <li><a href="#">Главная</a></li>
+			   <li><a href="#">Магазин</a></li>
+			   <li><a href="#">Средства для ухода</a></li>
+			   <li><a href="#"><span>Набор для путешествий "BAXTER OF CALIFORNIA"</span></a></li>
+			</ul>
 		  </div>
 	   </div>
 	   
@@ -80,7 +84,8 @@
 			<li>удобная кожанная косметичка</li>
 		 </ul>
 	   </div>
-	 </div>  
+	 </div>
+	</div>
 	</main>
 	
 	<footer class="main-footer">
