Работа с фотошопом «Барбершоп»

--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
 	      <a class="login" href=#>Вход</a>
 	    </section>
 	    <section class="logotip">
-	      <img src="http://placehold.it/150x100" width="200px" height="50px">
+	      <img src="" width="200px" height="50px">
 	    </section>
 	  </div>
 	</header>
@@ -30,7 +30,7 @@
 	<main class="page-main">
 	  <div class="main-container">
 	    <div class="block-breadcrumbs">
-	     <h1 class="zagolovok" >Средства для ухода</h1>
+	     <h1 class="subject" >Средства для ухода</h1>
 	     <section class="breadcrumbs">
            <ul>
 		    <li><a href="#">Главная</a></li>
@@ -94,7 +94,7 @@
 	 <div class="main-product">
 	   <div class="product-img">
 	     <article>
-	       <img src="http://placehold.it/150x100">
+	       <img src="img/Layer 38.JPG">
 		   <section>
 		     <p>Набор для путешествий<br>
 			   "BAXTER OF CALIFORNIA"<br>
@@ -104,7 +104,7 @@
          </article>  
 	
 	     <article>
-	       <img src="http://placehold.it/150x100">
+	       <img src="img/Layer 30.JPG">
 		   <section>
 		    <p>Увлажняющий кондиционер<br>
 			   "BAXTER OF CALIFORNIA"<br>
@@ -115,7 +115,7 @@
 	
     
 	     <article>
-	       <img src="http://placehold.it/150x100">
+	       <img src="img/Layer 39.JPG">
 		   <section>
 		   <p>Гель для волос<br>
 			   "SUAVECITO"<br>
@@ -126,7 +126,7 @@
 	
 	
          <article>
-	       <img src="http://placehold.it/150x100">
+	       <img src="img/Layer 32.JPG">
 		   <section>
 		   <p>Глина для укладки волос<br>
 			   "AMERICAN CREW"<br>
@@ -136,7 +136,7 @@
          </article>  
   
         <article>
-	       <img src="http://placehold.it/150x100">
+	       <img src="img/Layer 33.JPG">
 		   <section>
     	   <p>Гель для волос<br>
 			   "AMERICAN CREW"<br>
@@ -147,7 +147,7 @@
 	
 
 	    <article>
-            <img src="http://placehold.it/150x100">
+            <img src="img/Layer 42.JPG">
 			<section>
 		    <p>Набор для бритья<br>
 			   "BAXTER OF CALIFORNIA"<br>
